--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
-div {
-    flex: 1;
-}
-
 #dasboard {
     display: grid;
 }
 
 #sidebar {
-    grid-column: 1 / 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: end;
     background-color: blue;
 }
 
 #main-content {
+    grid-column-start: 2;
+    grid-column-end: end;
+    grid-row-start: 2;
+    grid-row-end: end;
     background-color: gray;
+}
+
+#header {
+    grid-column-start: 2;
+    grid-column-end: end;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: lightgray;
 }
