--- a/style.css
+++ b/style.css
@@ -1,27 +1,74 @@
-#dasboard {
+@font-face {
+    font-family: "Roboto";
+    src: url("Roboto/Roboto-Regular.ttf");
+}
+
+body {
+    font-family: "Roboto";
+    font-size: 1em;
+}
+
+div {
     display: grid;
 }
 
 #sidebar {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: end;
+    color: white;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
     background-color: blue;
 }
 
 #main-content {
-    grid-column-start: 2;
-    grid-column-end: end;
-    grid-row-start: 2;
-    grid-row-end: end;
+    grid-column: 2 / end;
+    grid-row: 2 / end;
     background-color: gray;
 }
 
 #header {
-    grid-column-start: 2;
-    grid-column-end: end;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    grid-column: 2 / end;
+    grid-row: 1 / 2;
     background-color: lightgray;
+}
+
+#search {
+    grid-column: 1 / 2;
+}
+
+#bell {
+    grid-column: 2 / 3;
+}
+
+#pfp {
+    grid-column: 3 / 4;
+}
+
+#username {
+    grid-column: 4 / 5;
+}
+
+#pfp-big {
+    grid-column: 1 / 2;
+}
+
+#landing {
+    grid-column: 2 / 3;
+}
+
+#welcome {
+    grid-row: 1 / 2;
+    grid-column: 1 / end;
+}
+
+#username {
+    grid-column: 1 / end;
+    grid-row: 2 / 3;
+}
+
+#buttons {
+    grid-column: 3 / 4;
+}
+
+#buttons > button {
+    grid-column: auto / span 1;
 }
